--- a/index.html
+++ b/index.html
@@ -891,19 +891,7 @@
 Read Data
 Here transcript data like chunk below 30 minutes or equal.
 
-Please wait until all ${total} chunks are copied in your AI tool before summarizing. Only after receiving all chunks, begin summary or explanation.
-
-Prompt:
-You are an AI assistant. I'm uploading a transcript text file from a YouTube video. It includes the full script and video title.
-
-Your job is to extract and summarize only the most important points — no filler, no unnecessary lines. Focus only on key ideas, main topics, useful tips, and actual value the speaker is sharing.
-
-Please ask the following before starting:
-1. What is your preferred language? (e.g., English, Hindi, Tamil, Hinglish)
-2. What is your goal or reason for watching this video? (e.g., quick learning, notes, content ideas, summary, job prep)
-
-After that, give a clear, easy-to-read summary in the selected language. Be respectful, clear, and straight to the point. Avoid repeating, motivating, or generic advice unless it was in the video itself.
-
+Please wait until all ${total} chunks are copied in your AI tool before Start your work. Only after receiving all chunks, begin start our work that we already tell you.
 Transcript:
 ${chunkText}`;
     }
